Added Inventory Stub
